[project]
name = "text-mining-topic-sentiment-analysis"
version = "0.1.0"
description = "Topic and sentiment analysis of tweets from the 2020 US election period."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "fasttext-wheel",
  "kaggle",
  "matplotlib",
  "nltk",
  "numpy",
  "pandas",
  "scikit-learn",
  "vaderSentiment",
  "wordcloud",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false
